tests/checker/bad/lib/BadADTLib3c.scilla
library BadADTLib3a

type TestType2 =
| Item1 of Int32
| Item5
